--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,11 @@
   width: 568px;
 }
 
+.header__title{
+  width: 730px;
+  display:flex;
+}
+
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
