--- a/styles/style.css
+++ b/styles/style.css
@@ -88,6 +88,139 @@ a{
   top: 64px;
 }
 
+.content{
+
+}
+
+.description{
+  margin: 100px auto;
+  display: flex;
+  justify-content: center;
+  border: 1px solid rgb(34, 255, 0);
+}
+
+.two-columns{
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  min-height: 250px;
+}
+
+.two-columns__brief{
+  width: 175px;
+  display: flex;
+}
+
+.two-columns__brief > h4{
+  margin-block: 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-style: normal;
+  color:  #2f80ed;
+  font-weight: lighter;
+}
+
+.two-columns__main-text{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__paragraph > p{
+  display: inline;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.centered-block{
+  margin:30px 0%;
+}
+
+.two-columns__span-accent{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.digits{
+  margin: 100px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid rgb(34, 255, 0);
+}
+
+.section-title{
+  text-align: center;
+  width:60%;
+  border: 1px solid rgb(255, 0, 0);
+}
+
+.section-title > h1{
+  display: inline;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+}
+
+.section-subtitle{
+  text-align: center;
+  width:60%;
+  margin-top: 20px;
+  border: 1px solid rgb(255, 0, 0);
+}
+
+.section-subtitle > h3{
+  display: inline;
+  line-height: 34px;
+  font-size: 24px;
+  font-style: normal;
+}
+
+.table{
+  border: 1px solid rgb(255, 0, 0);
+  width: 1100px;
+  margin:auto;
+  display:flex;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap:wrap;
+}
+
+.table__cell{
+  border: 1px solid rgb(255, 0, 0);
+  width: 250px;
+  margin-top: 60px;
+}
+
+.table__heading{
+  border: 1px solid rgb(255, 0, 0);
+}
+
+.table__heading > h3{
+  display: inline;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+
+}
+
+.table__text{
+  border: 1px solid rgb(255, 0, 0);
+  margin-top: 20px;
+}
+
+.table__text > p{
+  display: inline;
+  line-height: 1.2;
+  font-size: 18px;
+  font-style: normal;
+}
+
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
