--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Helvetica Neue", "Arial", sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
@@ -40,6 +40,8 @@
 }
 
 .header__title{
+  margin: 0px;
+  padding: 0px;
   align-self: center;
   font-size: 102px;
   font-weight: 600;
@@ -60,10 +62,6 @@
   font-size: 18px;
   font-style: normal;
   z-index: 2;
-}
-
-.header__subtitle > p{
-  display: inline;
   line-height: 25px;
 }
 
@@ -73,15 +71,12 @@
 }
 
 .header__main-illustration{
+  height: 608px;
+  width: 765px;
   position: absolute;
   right: 0%;
   bottom: 0%;
   z-index: 1;
-}
-
-.header__main-illustration > img{
-  height: 608px;
-  width: 765px;
 }
 
 .header__square-pic{
@@ -111,9 +106,6 @@
 .two-columns__brief{
   width: 175px;
   display: flex;
-}
-
-.two-columns__brief > h4{
   margin-block: 0;
   line-height: 1.2;
   font-size: 18px;
@@ -126,19 +118,17 @@
   display: flex;
   justify-content: space-between;
   flex-direction: column;
+  gap: 30px;
   width: 80%;
   min-width: 784px;
 }
 
-.two-columns__paragraph > p{
+.two-columns__paragraph{
   display: inline;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-}
-
-.centered-block{
-  margin:30px 0%;
+  margin:0;
 }
 
 .two-columns__span-accent{
@@ -152,27 +142,24 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: "Helvetica Neue", "Arial", sans-serif;
 }
 
 .section-title{
   text-align: center;
   width:60%;
-}
-
-.section-title > h1{
   display: inline;
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
+  margin: 0px;
 }
 
 .section-subtitle{
   text-align: center;
   width:60%;
+  margin: 0px;
   margin-top: 20px;
-}
-
-.section-subtitle > h3{
   display: inline;
   line-height: 34px;
   font-size: 24px;
@@ -182,19 +169,22 @@
 
 .table{
   width: 1100px;
-  margin:auto;
+  margin:auto 0px;
+  padding: 0px;
   display:flex;
   justify-content: space-between;
   flex-direction: row;
   flex-wrap:wrap;
+  list-style-type:none;
 }
 
 .table__cell{
   width: 250px;
+  margin: 0px;
   margin-top: 60px;
 }
 
-.table__heading > h3{
+.table__heading{
   display: inline;
   line-height: 1.15;
   font-size: 24px;
@@ -202,12 +192,9 @@
 }
 
 .table__text{
-  display: inline-block;
-  margin-top: 20px;
-}
-
-.table__text > p{
+  display: flex;
   margin: 0;
+  margin-top: 20px;
   line-height: 1.2;
   font-size: 18px;
   font-style: normal;
@@ -224,15 +211,14 @@
   align-items: center;
   min-height: 890px;
   position: relative;
+  font-family: "Helvetica Neue", "Arial", sans-serif;
 }
 
 .feynman__title{
+  margin: 0px;
   margin-top: 100px;
   width: 648px;
   text-align: center;
-}
-
-.feynman__title > h1{
   display: inline;
   line-height: 1.15;
   font-size: 120px;
@@ -240,13 +226,10 @@
 }
 
 .feynman__subtitle{
+  margin: 0px;
   margin-top: 70px;
   max-width: max-content;
-}
-
-.feynman__subtitle > h3{
   display: inline-block;
-  margin: 0;
   line-height: 51px;
   font-size: 36px;
   font-style: normal;
@@ -274,6 +257,11 @@
   color: white;
   overflow: hidden;
   position: relative;
+  font-family: "Helvetica Neue", "Arial", sans-serif;
+}
+
+.section-title_theme_dark{
+  z-index: 2;
 }
 
 .table__cell_theme_dark {
@@ -298,19 +286,21 @@
 
 .footer {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   background-color:  #1f1f1f;
   color: #f2f2f2;
   margin: 0;
+  min-height: 350px;
+  padding: 60px 0 40px;
+  box-sizing: border-box;
+  font-family: "Helvetica Neue", "Arial", sans-serif;
 }
 
 .footer__columns{
   display: flex;
   justify-content: space-between;
+  margin: 0 auto;
   width: 90%;
   position: relative;
-  margin: 60px 0 40px;
 }
 
 .footer__column{
@@ -360,6 +350,7 @@
 
 
 .footer__column-links{
+  padding: 0px;
   display: flex;
   flex-direction: column;
   margin: 20px 0 16px;
@@ -371,13 +362,11 @@
 }
 
 .footer__column-link{
-  margin-top: 10px;
-  margin-left: -40px;
   text-decoration: none;
   color:  #f2f2f2;
 }
 
-.footer__column-link > img{
+.footer__social-icon{
   width: 16px;
   height: 16px;
   margin-right: 10px;
