--- a/blocks/feynman/__subtitle/feynman__subtitle.css
+++ b/blocks/feynman/__subtitle/feynman__subtitle.css
@@ -5,6 +5,5 @@
   display: inline-block;
   line-height: 51px;
   font-size: 36px;
-  font-style: normal;
-  font-weight: lighter;
+  font-weight: normal;
 }
