--- a/blocks/footer/__author/footer__author.css
+++ b/blocks/footer/__author/footer__author.css
@@ -3,6 +3,5 @@
   display: inline;
   line-height: 25px;
   font-size: 18px;
-  font-style: normal;
-  font-weight: lighter;
+  font-weight: normal;
 }
