--- a/blocks/footer/__column-links/footer__column-links.css
+++ b/blocks/footer/__column-links/footer__column-links.css
@@ -5,7 +5,6 @@
   margin: 20px 0 16px;
   line-height: 30px;
   font-size: 18px;
-  font-style: normal;
-  font-weight: lighter;
+  font-weight: normal;
   list-style-type:none;
 }
