--- a/blocks/feynman/__title/feynman__title.css
+++ b/blocks/feynman/__title/feynman__title.css
@@ -1,6 +1,6 @@
 .feynman__title{
   margin: 0px;
-  width: 648px;
+  max-width: 648px;
   text-align: center;
   display: inline;
   line-height: 1.15;
