--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,5 +1,7 @@
 .feynman{
   margin:0px;
+  padding-top:100px;
+  box-sizing: border-box;
   background-color:  #f2f2f2;
   background-image: url('../../images/feynman.png');
   background-repeat: no-repeat;
