--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -4,7 +4,7 @@
   align-self: center;
   font-size: 102px;
   font-weight: 600;
-  width: 730px;
+  max-width: 730px;
   display: inline;
   line-height: 96px;
   z-index: 2;
