--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -1,6 +1,6 @@
 .kaufman{
   margin: 0;
-  padding: 90px;
+  padding: 90px 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
