--- a/blocks/khan/__quote-author-subline/khan__quote-author-subline.css
+++ b/blocks/khan/__quote-author-subline/khan__quote-author-subline.css
@@ -1,6 +1,6 @@
 .khan__quote-author-subline{
   line-height: 1.15;
   font-size: 24px;
-  font-style: normal;
+  font-weight: normal;
   margin: 0px 0px 68px;
 }
