--- a/blocks/rotation/rotation.css
+++ b/blocks/rotation/rotation.css
@@ -1,3 +1,12 @@
 .rotation{
   animation: rotate 20s linear infinite;
 }
+
+@keyframes rotate{
+  0%{
+    transform: rotate(0);
+  }
+  100%{
+    transform: rotate(360deg);
+  }
+}
