--- a/blocks/two-columns/__main-text/two-columns__main-text.css
+++ b/blocks/two-columns/__main-text/two-columns__main-text.css
@@ -3,6 +3,6 @@
   justify-content: space-between;
   flex-direction: column;
   gap: 30px;
-  width: 80%;
+  max-width: 80%;
   min-width: 784px;
 }
